hphp/test/slow/parser/semi-reserved-keywords/enum_class_constant_bad.php.expectf
Fatal error: syntax error, unexpected T_CLASS in %stest/slow/parser/semi-reserved-keywords/enum_class_constant_bad.php on line 5
